force-app/main/default/objects/Artist_Fee_Definition__c/Artist_Fee_Definition__c.object-meta.xml
<CustomObject>
    <description>An object hat contains rich text breakdown of an artist&apos;s fee</description>
    <label>Artist Fee Definition</label>
    <nameField>
        <label>Artist Fee Definition</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Artist Fee Definitions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>