force-app/main/default/objects/Artist_Fee_Definition__c/fields/Accommodation_and_Meals__c.field-meta.xml
<CustomField>
    <fullName>Accommodation_and_Meals__c</fullName>
    <inlineHelpText>How many people require Accommodation and Meals ?</inlineHelpText>
    <label>Accommodation and Meals</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>