force-app/main/default/objects/Artist_Fee_Definition__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Is this fee currently active ? Inactive fees will not be selected during Quote Creation</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>