force-app/main/default/objects/Artist_Fee_Definition__c/fields/Artist__c.field-meta.xml
<CustomField>
    <fullName>Artist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Artist</label>
    <referenceTo>Artist__c</referenceTo>
    <relationshipLabel>Artist Fee Definitions</relationshipLabel>
    <relationshipName>Artist_Fee_Definitions</relationshipName>
    <type>Lookup</type>
</CustomField>