force-app/main/default/objects/Artist_Fee_Definition__c/fields/Band_or_Solo__c.field-meta.xml
<CustomField>
    <fullName>Band_or_Solo__c</fullName>
    <label>Band or Solo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Solo_or_with_Band</valueSetName>
    </valueSet>
</CustomField>