force-app/main/default/objects/Artist_Fee_Definition__c/fields/Definition__c.field-meta.xml
<CustomField>
    <fullName>Definition__c</fullName>
    <label>Definition</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>