force-app/main/default/objects/Artist_Fee_Definition__c/fields/Flight_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Flight_Requirements__c</fullName>
    <inlineHelpText>How many flights and ground travel is requied for this fee ?</inlineHelpText>
    <label>Flight Requirements</label>
    <length>255</length>
    <type>Text</type>
</CustomField>