force-app/main/default/objects/Artist_Fee_Definition__c/fields/MC__c.field-meta.xml
<CustomField>
    <fullName>MC__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if the performance type is MC</inlineHelpText>
    <label>MC</label>
    <type>Checkbox</type>
</CustomField>