force-app/main/default/objects/Artist_Fee_Definition__c/fields/Performance_Fee_Incl_VAT__c.field-meta.xml
<CustomField>
    <fullName>Performance_Fee_Incl_VAT__c</fullName>
    <formula>Price__c + VAT_on_Performance_Fee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Performance Fee Incl VAT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>