force-app/main/default/objects/Artist_Fee_Definition__c/fields/Sing__c.field-meta.xml
<CustomField>
    <fullName>Sing__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Check this box if the performance type is singing</inlineHelpText>
    <label>Sing</label>
    <type>Checkbox</type>
</CustomField>