force-app/main/default/objects/Artist_Fee_Definition__c/fields/Special_conditions__c.field-meta.xml
<CustomField>
    <fullName>Special_conditions__c</fullName>
    <inlineHelpText>Any special conditions that apply to this fee definition</inlineHelpText>
    <label>Special conditions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>