force-app/main/default/objects/Artist_Fee_Definition__c/fields/Special_or_Standard_Fee__c.field-meta.xml
<CustomField>
    <fullName>Special_or_Standard_Fee__c</fullName>
    <label>Special or Standard Fee</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard Fee</fullName>
                <default>true</default>
                <label>Standard Fee</label>
            </value>
            <value>
                <fullName>Special Fee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>