force-app/main/default/objects/Artist_Fee_Definition__c/fields/Technical_1_500_people__c.field-meta.xml
<CustomField>
    <fullName>Technical_1_500_people__c</fullName>
    <inlineHelpText>The amount this artist charges for technical if the audience is 1-500 people</inlineHelpText>
    <label>Technical (1 - 500 people)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>