force-app/main/default/objects/Artist_Fee_Definition__c/fields/Technical_501_1000_people__c.field-meta.xml
<CustomField>
    <fullName>Technical_501_1000_people__c</fullName>
    <inlineHelpText>The amount the artist charges for technical for 501 - 1000 people</inlineHelpText>
    <label>Technical (501 - 1000 people)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>