force-app/main/default/objects/Artist_Fee_Definition__c/fields/VAT_on_Performance_Fee__c.field-meta.xml
<CustomField>
    <fullName>VAT_on_Performance_Fee__c</fullName>
    <formula>Price__c * $Setup.VocalEventsSettings__c.VAT__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VAT on Performance Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>